--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat Health</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sono:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+    <section>
+        <div class="half-withd">
+            <h1><span class="orange"> Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!
+            </p>
+            <a class="link-buttom" href="google.com">Order Food</a>
+        </div>
+        <div class="half-withd">
+            <img src="images/my-bg.png" alt="">
+        </div>
+
+    </section>
 </body>
 
 </html>
