--- a/index.html
+++ b/index.html
@@ -14,18 +14,38 @@
 
 <body>
 
-    <section>
+    <section id="are-jun">
         <div class="half-withd">
             <h1><span class="orange"> Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!
             </p>
-            <a class="link-buttom" href="google.com">Order Food</a>
+            <a target="_blank" class="link-buttom"
+                href="https://www.youtube.com/watch?v=QTzAZ5y0FW0&ab_channel=ROCKERSSTUDIO"><b>Order Food</b></a>
         </div>
         <div class="half-withd">
             <img src="images/my-bg.png" alt="">
         </div>
 
     </section>
+
+    <section class="container-area">
+        <div class="women-area">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="alamin-sardar">
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+            <a class="link-you" target="_blank"
+                href="https://www.youtube.com/watch?v=bi5PhlIQpwU&ab_channel=SonyMusicIndiaVEVO"> <b>Contact me</b></a>
+        </div>
+    </section>
+
+
+
 </body>
 
 </html>
