--- a/index.html
+++ b/index.html
@@ -44,7 +44,23 @@
         </div>
     </section>
 
+    <section>
+        <div class="al-amin">
+            <h2>My recipies</h1>
 
+        </div>
+
+        <div class="sar-dar">
+
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s.</p>
+        </div>
+
+    </section>
+    <footer>
+        © Al Amin Sardar 2023, a Programming Hero initiative
+    </footer>
 
 </body>
 
